Avoid unnecessary sorting and instantiations in readMapOfStrings